Ajustado documento de planejamento.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>

--- a/docs/css/extra_css.css
+++ b/docs/css/extra_css.css
@@ -2,4 +2,8 @@
 .md-header{
     background-color:#93c4d3;
 }
+
+html .md-nav--primary .md-nav__title--site {
+    background-color: #93c4d3;
+}
     
