--- a/docs/css/extra_css.css
+++ b/docs/css/extra_css.css
@@ -7,17 +7,20 @@ html .md-nav--primary .md-nav__title--site {
     background-color: #93c4d3;
 }
 
+
+.container {
+  display: flex;
+  flex-direction: row;
+}
+
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    float: left; 
-    margin-right: 40px;
-    margin-bottom: 40px;
-    width: 200px;
-    height: 300px;
-    align-content: center;
-  }
+    margin-right: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    }
   
   /* On mouse-over, add a deeper shadow */
   .card:hover {
@@ -27,7 +30,11 @@ html .md-nav--primary .md-nav__title--site {
   /* Add some padding inside the card container */
   /* Add some padding inside the card container */
 
-  img {
+  .integrante{
     border-radius: 5px 5px 0 0;
     width:100%;
+  }
+
+  .icon{
+    width: 25px;
   }
